Add Jetty and serve greetings page
Launch Main in intellij, and navigate to http://localhost:9999